2008-3-30  Keishi Suenaga <skeishi@yahoo.co.jp>
	patches from Yair K.
	* libarc/arc_tar.c       fix-archive-add-crash
	* timidity/reverb.c      fix-reverb-crash-from-Debian
	* timidity/miditrace.c   fix-soundspec-in-trace-mode
	* autoconf/utils.m4
	  configure.in
	  timidity/Makefile.am
	  timidity/midi_a.c
	  timidity/output.c
	  timidity/reverb.c
	  timidity/reverb.h
	  timidity/sun_a.c
	  timidity/sysdep.h       for support OpenBSD

2008-3-28  Stas Sergeev <stsp@aknet.ru>
	* timidity/midi_a.c	 remove gnuc extensions

2007-3-10  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface/npsyn_c.c
	  interface/rtsyn.h
	  interface/rtsyn_common.c
	  interface/rtsyn_npipe.c
	  timidity/npipe_a.c
	  timidity/playmidi.c
	  timidity/portaudio_a.c
	  timidity/timidity.c
	  utils/timer.c:          Windows Named Pipe interface.
	  
2007-02-09  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface.h.in:       Windows Named Pipe
	* timidity/timidity.c:  fix typo

2007-02-09  Keishi Suenaga <skeishi@yahoo.co.jp>

	* configure.in
	  interface/Makefile.am
	  interface/npsyn_c.c (add)
	  interface/rtsyn.h
	  interface/rtsyn_common.c
	  interface/rtsyn_npipe.c (add)
	  timidity/Makefile.am
	  timidity/npipe_a.c (add)
	  timidity/output.c
	  timidity/timidity.c       
	  timidity/controls.c:      Windows Named Pipe Interface(new)
	* timidity/resample.c       small fix frreing gauss_table.
	* windrv/timiditydrv.c
	* windrv/timiwp_timidity.c: fix for WindowsMediaPlayer.

2007-01-28  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface/rtsyn_common.c: fix sysex check 
	* timidity/portaudio_a.c    small fix for compiling
	* timidity/timidity.c       w32 cfg file sequence changed
	                            option > exe dir > win dir
	                            w32 set stdin&out binarymode
	* timidity/w32_a.c          small fix for compiling
	* windrv/Makefile.am        re-add add timidity.idl
	* windrv/timiditydrv.c      re-add MIDIOUTCAPS2A(W)
	* windrv/timiditydrv.idl    re-add
